Session - 2/busybox-with-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      name: busybox
      namespace: default
      labels:
        app: busybox
        version: v1
    spec:
      containers:
      - image: busybox
        command:
        - sleep
        - "3600"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: busybox-persistent-storage
          mountPath: /var/lib/busybox
        name: busybox
      volumes:
      - name: busybox-persistent-storage
        persistentVolumeClaim:
          claimName: busybox-pv-claim  
      restartPolicy: Always
